6월 13일 오전 수업 코드

--- a/Python/python_pandas.ipynb
+++ b/Python/python_pandas.ipynb
@@ -246,6 +246,611 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6/13(화)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 인덱스 및 컬럼명 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "0     4     7    10\n",
+      "1     5     8    11\n",
+      "2     6     9    12\n",
+      "   c1  c2  c3\n",
+      "0   4   7  10\n",
+      "1   5   8  11\n",
+      "2   6   9  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 컬럼명 변경\n",
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6],\n",
+    "                   \"col2\" : [7, 8, 9],\n",
+    "                   \"col3\" : [10, 11, 12]})\n",
+    "print(df)\n",
+    "df.columns = ['c1', 'c2', 'c3']\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "    col1  col2  col3\n",
+      "10     4     7    10\n",
+      "20     5     8    11\n",
+      "30     6     9    12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 인덱스 변경\n",
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6],\n",
+    "                   \"col2\" : [7, 8, 9],\n",
+    "                   \"col3\" : [10, 11, 12]}, index=['A', 'B', 'C'])\n",
+    "print(df)\n",
+    "df.index = [10, 20, 30]\n",
+    "print(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataFrame의 속성 정보 보기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "컬럼 정보: Index(['col1', 'col2', 'col3'], dtype='object')\n",
+      "컬럼 정보: Index(['col1', 'col2', 'col3'], dtype='object')\n",
+      "인덱스 라벨 정보: Index(['A', 'B', 'C'], dtype='object')\n",
+      "값 정보 확인: [[ 4  7 10]\n",
+      " [ 5  8 11]\n",
+      " [ 6  9 12]]\n",
+      "값 정보 확인: [[ 4  7 10]\n",
+      " [ 5  8 11]\n",
+      " [ 6  9 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6],\n",
+    "                   \"col2\" : [7, 8, 9],\n",
+    "                   \"col3\" : [10, 11, 12]}, index=['A', 'B', 'C'])\n",
+    "print('컬럼 정보:', df.columns)\n",
+    "print('컬럼 정보:', df.keys())\n",
+    "\n",
+    "print('인덱스 정보:', df.index)\n",
+    "\n",
+    "print('값 정보 확인:', df.values)\n",
+    "print('값 정보 확인:', df.to_numpy()) # 권장"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 인덱스 관리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 원본 DataFrame\n",
+      "   date   City  Temperature\n",
+      "0  2021  Seoul           32\n",
+      "1  2022  Seoul           34 \n",
+      "\n",
+      "기존 컬럼을 인덱스로 변경\n",
+      "       City  Temperature\n",
+      "date                    \n",
+      "2021  Seoul           32\n",
+      "2022  Seoul           34 Index(['2021', '2022'], dtype='object', name='date') \n",
+      "\n",
+      "새로운 인덱스로 변경\n",
+      "    City  Temperature\n",
+      "0  Seoul           32\n",
+      "1  Seoul           34 RangeIndex(start=0, stop=2, step=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({ \"date\":['2021','2022'],\n",
+    "                   \"City\": [\"Seoul\", \"Seoul\"],\n",
+    "                   \"Temperature\": [32, 34]})\n",
+    "print(\"1. 원본 DataFrame\")\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "# 1) 기존 컬럼을 인덱스로 변경\n",
+    "print(\"기존 컬럼을 인덱스로 변경\")\n",
+    "df.set_index('date', inplace=True)\n",
+    "print(df, df.index, '\\n')\n",
+    "\n",
+    "# 2) 새로운 인덱스로 변경\n",
+    "print(\"새로운 인덱스로 변경\")\n",
+    "# df.reset_index(inplace=True)                # 기존 인덱스를 컬럼으로 변경하고 새로운 인덱스 생성\n",
+    "df.reset_index(inplace=True, drop=True)   # 기존 인덱스를 삭제하고 새로운 인덱스 생성\n",
+    "print(df, df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   date   City  Temperature\n",
+      "A  2021  Seoul           32\n",
+      "E  2022  Seoul           34\n",
+      "C  2012  Seoul           32\n",
+      "B  2023  Seoul           34\n",
+      "D  2024  Seoul           53\n",
+      "2. index 재배치\n",
+      "   date   City  Temperature\n",
+      "A  2021  Seoul           32\n",
+      "B  2023  Seoul           34\n",
+      "C  2012  Seoul           32\n",
+      "D  2024  Seoul           53\n",
+      "E  2022  Seoul           34\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({ \"date\":['2021','2022','2012','2023','2024'],\n",
+    "                    \"City\": [\"Seoul\", \"Seoul\", \"Seoul\",\"Seoul\",\"Seoul\"],\n",
+    "                    \"Temperature\": [32, 34,32, 34,53]\n",
+    "                  },index=list('AECBD'))\n",
+    "print(df)\n",
+    "\n",
+    "# 3) index 재배치\n",
+    "new_df = df.reindex(index=list(\"ABCDE\"))\n",
+    "print(\"2. index 재배치\")\n",
+    "print(new_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     a\n",
+      "1   12\n",
+      "2    2\n",
+      "1  120\n",
+      "2   20\n",
+      "     a\n",
+      "0   12\n",
+      "1    2\n",
+      "2  120\n",
+      "3   20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4) df 병합시 기존 index값이 중복발생 ==> ignore_index=True 로 index값을 재설정\n",
+    "df1 = pd.DataFrame({'a':[12,2]},\n",
+    "                   index=[1,2])\n",
+    "df2 = pd.DataFrame({'a':[120,20]},\n",
+    "                   index=[1,2])\n",
+    "\n",
+    "new_df = pd.concat([df1, df2])\n",
+    "print(new_df)\n",
+    "new_df = pd.concat([df1, df2], ignore_index=True)\n",
+    "print(new_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 색인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. col1 컬럼만 조회\n",
+      "A    4\n",
+      "B    5\n",
+      "C    6\n",
+      "D    6\n",
+      "Name: col1, dtype: int64\n",
+      "2. col1 컬럼만 조회\n",
+      "A    4\n",
+      "B    5\n",
+      "C    6\n",
+      "D    6\n",
+      "Name: col1, dtype: int64\n",
+      "3. col1와 col2 컬럼 조회\n",
+      "   col2  col1\n",
+      "A     7     4\n",
+      "B     8     5\n",
+      "C     9     6\n",
+      "D     9     6\n",
+      "4. col1 컬럼만 여러번 조회\n",
+      "   col1  col1  col1\n",
+      "A     4     4     4\n",
+      "B     5     5     5\n",
+      "C     6     6     6\n",
+      "D     6     6     6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 컬럼 조회\n",
+    "# 1. 싱글 및 멀티 컬럼 조회\n",
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6, 6],\n",
+    "                   \"col2\" : [7, 8, 9, 9],\n",
+    "                   \"col3\" : [10, 11, 12, 12]},\n",
+    "                   index = list(\"ABCD\"))\n",
+    "\n",
+    "print(\"1. col1 컬럼만 조회\")\n",
+    "print(df.col1 )     # Series 반환\n",
+    "\n",
+    "print(\"2. col1 컬럼만 조회\")\n",
+    "print(df['col1'])  # Series 반환\n",
+    "\n",
+    "print(\"3. col1와 col2 컬럼 조회\")\n",
+    "print(df[['col2', 'col1']])  # fancy 색인 비슷 , # DataFrame 반환\n",
+    "\n",
+    "print(\"4. col1 컬럼만 여러번 조회\")\n",
+    "print(df[['col1','col1','col1']])  # DataFrame 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "E     1     2    10\n",
+      "1. A 행 출력(인덱싱 label)\n",
+      "col1     4\n",
+      "col2     7\n",
+      "col3    10\n",
+      "Name: A, dtype: int64\n",
+      "2. A 와 B행 출력(fancy label)\n",
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "3. B행부터 D행까지 출력(slicing label)\n",
+      "   col1  col2  col3\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "4. A,C,E행 출력(boolean label)\n",
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "C     6     9    12\n",
+      "E     1     2    10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 행 조회\n",
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6, 6,1],\n",
+    "                   \"col2\" : [7, 8, 9, 9,2],\n",
+    "                   \"col3\" : [10, 11, 12, 12,10]},\n",
+    "                   index = list(\"ABCDE\"))\n",
+    "print(df)\n",
+    "\n",
+    "# df.loc \n",
+    "print(\"1. A 행 출력(인덱싱 label)\")\n",
+    "print(df.loc[\"A\"])\n",
+    "print(\"2. A 와 B행 출력(fancy label)\")\n",
+    "print(df.loc[[\"A\",\"B\"]])\n",
+    "print(\"3. B행부터 D행까지 출력(slicing label)\")\n",
+    "print(df.loc[\"B\":\"D\"])\n",
+    "print(\"4. A,C,E행 출력(boolean label)\") # 일반적으로 비교연산자, 논리연산자 사용\n",
+    "print(df.loc[[True,False,True,False,True]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "E     1     2    10\n",
+      "1. A 행 출력(인덱싱 위치)\n",
+      "col1     4\n",
+      "col2     7\n",
+      "col3    10\n",
+      "Name: A, dtype: int64\n",
+      "2. A 와 B행 출력(fancy 위치)\n",
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "3. B행부터 D행까지 출력(slicing label)\n",
+      "   col1  col2  col3\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "4. A,C,E행 출력(boolean label)\n",
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "C     6     9    12\n",
+      "E     1     2    10\n"
+     ]
+    }
+   ],
+   "source": [
+    "## df.iloc \n",
+    "print(df)\n",
+    "print(\"1. A 행 출력(인덱싱 위치)\")\n",
+    "print(df.iloc[0])\n",
+    "print(\"2. A 와 B행 출력(fancy 위치)\")\n",
+    "print(df.iloc[[0,1]])\n",
+    "print(\"3. B행부터 D행까지 출력(slicing label)\")\n",
+    "print(df.iloc[1:-1])\n",
+    "print(\"4. A,C,E행 출력(boolean label)\")\n",
+    "print(df.iloc[[True,False,True,False,True]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "E     1     2    10\n",
+      "df.loc['A', 'col1']: 4\n",
+      "df.loc[['A', 'B'], 'col1']: A    4\n",
+      "B    5\n",
+      "Name: col1, dtype: int64\n",
+      "df.loc[['A', 'B'], ['col1', 'col2']]:\n",
+      "    col1  col2\n",
+      "A     4     7\n",
+      "B     5     8\n",
+      "df.loc['B':'E', ['col1', 'col2']]:\n",
+      "    col1  col2\n",
+      "B     5     8\n",
+      "C     6     9\n",
+      "D     6     9\n",
+      "E     1     2\n",
+      "df.loc['B':'E', 'col2':'col3']:\n",
+      "    col2  col3\n",
+      "B     8    11\n",
+      "C     9    12\n",
+      "D     9    12\n",
+      "E     2    10\n",
+      "df.loc[[True, False, True, False, True], 'col2':'col3']:\n",
+      "    col2  col3\n",
+      "A     7    10\n",
+      "C     9    12\n",
+      "E     2    10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 행, 열 선택 추출\n",
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6, 6,1],\n",
+    "                   \"col2\" : [7, 8, 9, 9,2],\n",
+    "                   \"col3\" : [10, 11, 12, 12,10]},\n",
+    "                   index = list(\"ABCDE\"))\n",
+    "print(df)\n",
+    "\n",
+    "# loc\n",
+    "print(\"df.loc['A', 'col1']:\", df.loc['A', 'col1']) # 인덱싱\n",
+    "print(\"df.loc[['A', 'B'], 'col1']:\", df.loc[['A', 'B'], 'col1']) # 인덱싱 + fancy\n",
+    "print(\"df.loc[['A', 'B'], ['col1', 'col2']]:\\n\", df.loc[['A', 'B'], ['col1', 'col2']]) # fancy + fancy\n",
+    "print(\"df.loc['B':'E', ['col1', 'col2']]:\\n\", df.loc['B':'E', ['col1', 'col2']]) # slice + fancy\n",
+    "print(\"df.loc['B':'E', 'col2':'col3']:\\n\", df.loc['B':'E', 'col2':'col3']) # slice + slice\n",
+    "print(\"df.loc[[True, False, True, False, True], 'col2':'col3']:\\n\", df.loc[[True, False, True, False, True], 'col2':'col3']) # boolean + slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "E     1     2    10\n",
+      "df.iloc[0, 0]: 4\n",
+      "df.iloc[[0, 1], 0]:\n",
+      " A    4\n",
+      "B    5\n",
+      "Name: col1, dtype: int64\n",
+      "df.iloc[[0,  1], [0, 1]]:\n",
+      "    col1  col2\n",
+      "A     4     7\n",
+      "B     5     8\n",
+      "df.iloc[1:, [0, 1]]:\n",
+      "    col1  col2\n",
+      "B     5     8\n",
+      "C     6     9\n",
+      "D     6     9\n",
+      "E     1     2\n",
+      "df.iloc[1:, 1:]:\n",
+      "    col2  col3\n",
+      "B     8    11\n",
+      "C     9    12\n",
+      "D     9    12\n",
+      "E     2    10\n",
+      "df.iloc[[True, False, True, False, True], 1:]:\n",
+      "    col2  col3\n",
+      "A     7    10\n",
+      "C     9    12\n",
+      "E     2    10\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6, 6,1],\n",
+    "                   \"col2\" : [7, 8, 9, 9,2],\n",
+    "                   \"col3\" : [10, 11, 12, 12,10]},\n",
+    "                   index = list(\"ABCDE\"))\n",
+    "print(df)\n",
+    "\n",
+    "print(\"df.iloc[0, 0]:\", df.iloc[0, 0]) # 인덱싱\n",
+    "print(\"df.iloc[[0, 1], 0]:\\n\", df.iloc[[0, 1], 0]) # 인덱싱 + fancy\n",
+    "print(\"df.iloc[[0,  1], [0, 1]]:\\n\", df.iloc[[0,  1], [0, 1]]) # fancy + fancy\n",
+    "print(\"df.iloc[1:, [0, 1]]:\\n\", df.iloc[1:, [0, 1]]) # slice + fancy\n",
+    "print(\"df.iloc[1:, 1:]:\\n\", df.iloc[1:, 1:]) # slice + slice\n",
+    "print(\"df.iloc[[True, False, True, False, True], 1:]:\\n\", df.iloc[[True, False, True, False, True], 1:]) # boolean + slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A     4     7    10\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "E     1     2    10 \n",
+      "\n",
+      "   col1  col2  col3\n",
+      "A   100   100   100\n",
+      "B     5     8    11\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "E     1     2    10 \n",
+      "\n",
+      "   col1  col2  col3\n",
+      "A   200   200   200\n",
+      "B   200   200   200\n",
+      "C     6     9    12\n",
+      "D     6     9    12\n",
+      "E     1     2    10 \n",
+      "\n",
+      "   col1  col2  col3\n",
+      "A   200   200   200\n",
+      "B   200   200   200\n",
+      "C     6     9    12\n",
+      "D     6   900    12\n",
+      "E     1     2    10\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 조회후 값 변경\n",
+    "df = pd.DataFrame({\"col1\" : [4 ,5, 6, 6,1],\n",
+    "                   \"col2\" : [7, 8, 9, 9,2],\n",
+    "                   \"col3\" : [10, 11, 12, 12,10]},\n",
+    "                   index = list(\"ABCDE\"))\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "# 1. A행의 모든 값 변경\n",
+    "df.loc['A'] = 100\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "# 2. B, C행의 모든 값 변경\n",
+    "df.loc[['A', 'B']] = 200\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "# 3. D행의 col2 값을 900으로 변경\n",
+    "df.loc['D', 'col2'] = 900\n",
+    "print(df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
