--- a/Python/python_pandas.ipynb
+++ b/Python/python_pandas.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,9 +402,9 @@
       "2022  Seoul           34 Index(['2021', '2022'], dtype='object', name='date') \n",
       "\n",
       "새로운 인덱스로 변경\n",
-      "    City  Temperature\n",
-      "0  Seoul           32\n",
-      "1  Seoul           34 RangeIndex(start=0, stop=2, step=1)\n"
+      "   date   City  Temperature\n",
+      "0  2021  Seoul           32\n",
+      "1  2022  Seoul           34 RangeIndex(start=0, stop=2, step=1)\n"
      ]
     }
    ],
@@ -422,7 +422,7 @@
     "\n",
     "# 2) 새로운 인덱스로 변경\n",
     "print(\"새로운 인덱스로 변경\")\n",
-    "# df.reset_index(inplace=True)                # 기존 인덱스를 컬럼으로 변경하고 새로운 인덱스 생성\n",
+    "df.reset_index(inplace=True)                # 기존 인덱스를 컬럼으로 변경하고 새로운 인덱스 생성\n",
     "df.reset_index(inplace=True, drop=True)   # 기존 인덱스를 삭제하고 새로운 인덱스 생성\n",
     "print(df, df.index)"
    ]
@@ -673,19 +673,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   col1  col2  col3\n",
-      "A     4     7    10\n",
-      "B     5     8    11\n",
-      "C     6     9    12\n",
-      "D     6     9    12\n",
-      "E     1     2    10\n",
       "df.loc['A', 'col1']: 4\n",
       "df.loc[['A', 'B'], 'col1']: A    4\n",
       "B    5\n",
@@ -720,7 +714,6 @@
     "                   \"col2\" : [7, 8, 9, 9,2],\n",
     "                   \"col3\" : [10, 11, 12, 12,10]},\n",
     "                   index = list(\"ABCDE\"))\n",
-    "print(df)\n",
     "\n",
     "# loc\n",
     "print(\"df.loc['A', 'col1']:\", df.loc['A', 'col1']) # 인덱싱\n",
@@ -733,19 +726,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   col1  col2  col3\n",
-      "A     4     7    10\n",
-      "B     5     8    11\n",
-      "C     6     9    12\n",
-      "D     6     9    12\n",
-      "E     1     2    10\n",
       "df.iloc[0, 0]: 4\n",
       "df.iloc[[0, 1], 0]:\n",
       " A    4\n",
@@ -780,7 +767,6 @@
     "                   \"col2\" : [7, 8, 9, 9,2],\n",
     "                   \"col3\" : [10, 11, 12, 12,10]},\n",
     "                   index = list(\"ABCDE\"))\n",
-    "print(df)\n",
     "\n",
     "print(\"df.iloc[0, 0]:\", df.iloc[0, 0]) # 인덱싱\n",
     "print(\"df.iloc[[0, 1], 0]:\\n\", df.iloc[[0, 1], 0]) # 인덱싱 + fancy\n",
@@ -792,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -819,13 +805,7 @@
       "C     6     9    12\n",
       "D     6     9    12\n",
       "E     1     2    10 \n",
-      "\n",
-      "   col1  col2  col3\n",
-      "A   200   200   200\n",
-      "B   200   200   200\n",
-      "C     6     9    12\n",
-      "D     6   900    12\n",
-      "E     1     2    10\n"
+      "\n"
      ]
     }
    ],
@@ -837,17 +817,503 @@
     "                   index = list(\"ABCDE\"))\n",
     "print(df, '\\n')\n",
     "\n",
+    "# loc\n",
     "# 1. A행의 모든 값 변경\n",
     "df.loc['A'] = 100\n",
     "print(df, '\\n')\n",
     "\n",
     "# 2. B, C행의 모든 값 변경\n",
     "df.loc[['A', 'B']] = 200\n",
-    "print(df, '\\n')\n",
-    "\n",
+    "print(df, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A   200   200   200\n",
+      "B   200   200   200\n",
+      "C     6     9    12\n",
+      "D    -1   900    -1\n",
+      "E    -1     2    -1 \n",
+      "\n",
+      "   col1  col2  col3\n",
+      "A   200   200   200\n",
+      "B   200   200   200\n",
+      "C     6     9    12\n",
+      "D    -1   900    -1\n",
+      "E    -1     2    -1 \n",
+      "\n",
+      "   col1  col2  col3\n",
+      "A   200  -100  -100\n",
+      "B   200  -100  -100\n",
+      "C     6  -100  -100\n",
+      "D    -1  -100  -100\n",
+      "E    -1     2    -1 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# 3. D행의 col2 값을 900으로 변경\n",
     "df.loc['D', 'col2'] = 900\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "# 4. D, E행의 col1, col3 값을 -1으로 변경\n",
+    "df.loc[['D', 'E'], ['col1', 'col3']] = -1\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "# 5. A:D행의 col2, col3 값을 -100로 변경\n",
+    "df.loc['A':'D', 'col2':'col3'] = -100\n",
+    "print(df, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2  col3\n",
+      "A -1000  -100 -1000\n",
+      "B   200  -100  -100\n",
+      "C -1000  -100 -1000\n",
+      "D    -1  -100  -100\n",
+      "E    -1     2    -1 \n",
+      "\n",
+      "   col1  col2  col3\n",
+      "A -2000  -100 -2000\n",
+      "B -2000  -100 -2000\n",
+      "C -2000  -100 -2000\n",
+      "D -2000  -100 -2000\n",
+      "E -2000     2 -2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iloc\n",
+    "df.iloc[[0, 2], [0, 2]] = -1000\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "df.iloc[[True, True, True, True, True], [0, 2]] = -2000\n",
     "print(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 컬럼 추가, 삽입"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. DataFrame\n",
+      "    이름  국어  수학\n",
+      "1  홍길동  30  20\n",
+      "2  이순신  26  12\n",
+      "3  유관순  11  20\n",
+      "4  강감찬  10  12\n",
+      "2. add column(List)\n",
+      "    이름  국어  수학  영어\n",
+      "1  홍길동  30  20  10\n",
+      "2  이순신  26  12  20\n",
+      "3  유관순  11  20  30\n",
+      "4  강감찬  10  12  40\n",
+      "2. add column(Series)\n",
+      "    이름  국어  수학  영어  과학\n",
+      "1  홍길동  30  20  10  10\n",
+      "2  이순신  26  12  20  20\n",
+      "3  유관순  11  20  30  30\n",
+      "4  강감찬  10  12  40  40\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"이름\":['홍길동','이순신','유관순','강감찬'],\n",
+    "                   \"국어\":[30, 26, 11, 10],\n",
+    "                   \"수학\":[20, 12, 20, 12]\n",
+    "                 }, index=[1,2,3,4])\n",
+    "# 1. DataFrame 생성\n",
+    "print(\"1. DataFrame\")\n",
+    "print(df)\n",
+    "\n",
+    "# 2. df['컬럼명'] = List\n",
+    "df['영어'] = [10, 20, 30, 40]\n",
+    "print('2. add column(List)')\n",
+    "print(df)\n",
+    "\n",
+    "# 3. df['컬럼명'] = Series\n",
+    "df['과학'] = pd.Series(data=[10, 20, 30, 40]) # index가 0부터 생성 -> index를 맞춰줘야 함\n",
+    "df['과학'] = pd.Series(data=[10, 20, 30, 40], index=[1, 2, 3, 4])\n",
+    "print('2. add column(Series)')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2. add column\n",
+      "    이름  국어  수학  영어  과학   총합\n",
+      "1  홍길동  30  20  10  10   70\n",
+      "2  이순신  26  12  20  20   78\n",
+      "3  유관순  11  20  30  30   91\n",
+      "4  강감찬  10  12  40  40  102 \n",
+      "\n",
+      "    이름  국어  수학  영어  과학   총합    평균\n",
+      "1  홍길동  30  20  10  10   70  17.5\n",
+      "2  이순신  26  12  20  20   78  19.5\n",
+      "3  유관순  11  20  30  30   91  22.8\n",
+      "4  강감찬  10  12  40  40  102  25.5\n",
+      "    이름  국어  수학  영어  과학   총합  평균\n",
+      "1  홍길동  30  20  10  10   70  17\n",
+      "2  이순신  26  12  20  20   78  19\n",
+      "3  유관순  11  20  30  30   91  22\n",
+      "4  강감찬  10  12  40  40  102  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 총합 추가\n",
+    "print('2. add column')\n",
+    "df['총합'] = df['영어'] + df['과학'] + df['국어'] + df['수학']\n",
+    "print(df, '\\n')\n",
+    "df['평균'] = np.round(df['총합'] / 4, 1)\n",
+    "print(df)\n",
+    "# 평균 ==> series에 데이터 타입을 변경하는 함수\n",
+    "df['평균'] = df['평균'].astype(np.int32)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    이름  국어  수학  영어  과학   총합  평균 햡격여부\n",
+      "1  홍길동  30  20  10  10   70  17  불합격\n",
+      "2  이순신  26  12  20  20   78  19  불합격\n",
+      "3  유관순  11  20  30  30   91  22   합격\n",
+      "4  강감찬  10  12  40  40  102  25   합격\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습: 평균 > 20이면 합격, 아니면 불합격\n",
+    "df['햡격여부'] = ['합격' if i > 20 else '불합격' for i in df['평균']]\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3. df.assign() 이용 추가\n",
+      "    이름  국어  수학  영어\n",
+      "1  홍길동  30  20  10\n",
+      "2  이순신  26  12  20\n",
+      "3  유관순  11  20  30\n",
+      "4  강감찬  10  12  40\n",
+      "3. df.assign(콜백함수) 이용 추가\n",
+      "    이름  국어  수학  영어  총합  총합2\n",
+      "1  홍길동  30  20  10  60   60\n",
+      "2  이순신  26  12  20  58   58\n",
+      "3  유관순  11  20  30  61   61\n",
+      "4  강감찬  10  12  40  62   62\n",
+      "    이름  국어  수학  영어  총합  총합2    평균\n",
+      "1  홍길동  30  20  10  60   60  20.0\n",
+      "2  이순신  26  12  20  58   58  19.3\n",
+      "3  유관순  11  20  30  61   61  20.3\n",
+      "4  강감찬  10  12  40  62   62  20.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"이름\":['홍길동','이순신','유관순','강감찬'],\n",
+    "                   \"국어\":[30, 26, 11, 10],\n",
+    "                   \"수학\":[20, 12, 20, 12]\n",
+    "                 }, index=[1,2,3,4])\n",
+    "\n",
+    "print('3. df.assign() 이용 추가')\n",
+    "# new_df = df.assign(영어 = [10, 20, 30, 40]) # 원본유지\n",
+    "df = df.assign(영어 = [10, 20, 30, 40]) # 덮어쓰기\n",
+    "print(df)\n",
+    "\n",
+    "print('3. df.assign(콜백함수) 이용 추가')\n",
+    "def total(x):\n",
+    "    return x['국어'] + x['수학'] + x['영어']\n",
+    "# df = df.assign(총합=total)\n",
+    "df = df.assign(총합=lambda x: x['국어'] + x['수학'] + x['영어'],\n",
+    "               총합2=lambda x: x['국어'] + x['수학'] + x['영어']) # 한 번에 여러 컬럼 생성 가능\n",
+    "print(df)\n",
+    "\n",
+    "# 평균 컬럼 추가하기\n",
+    "df = df.assign(평균=lambda x: np.round(x['총합']/3, 1))\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    이름  국어  수학  영어  과학\n",
+      "1  홍길동  30  20  30  20\n",
+      "2  이순신  26  12  26  12\n",
+      "3  유관순  11  20  11  20\n",
+      "4  강감찬  10  12  10  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"이름\":['홍길동','이순신','유관순','강감찬'], \"국어\":[30, 26, 11, 10], \"수학\":[20, 12, 20, 12]}, index=[1,2,3,4])\n",
+    "df2 = pd.DataFrame({\"영어\":[30, 26, 11, 10], \"과학\":[20, 12, 20, 12]}, index=[1,2,3,4])\n",
+    "\n",
+    "new_df = pd.concat([df, df2], axis=1)\n",
+    "print(new_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    이름  영어  국어  수학\n",
+      "1  홍길동  30  30  20\n",
+      "2  이순신  26  26  12\n",
+      "3  유관순  11  11  20\n",
+      "4  강감찬  10  10  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 컬럼 삽입\n",
+    "df = pd.DataFrame({\"이름\":['홍길동','이순신','유관순','강감찬'], \"국어\":[30, 26, 11, 10], \"수학\":[20, 12, 20, 12]}, index=[1,2,3,4])\n",
+    "df.insert(1, \"영어\", [30, 26, 11, 10])\n",
+    "print(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 컬럼 삭제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\"이름\":['홍길동','이순신','유관순','강감찬'], \"국어\":[30, 26, 11, 10], \"수학\":[20, 12, 20, 12], \"영어\":[30, 26, 11, 10], \"과학\":[20, 12, 20, 12],\n",
+    "                   \"체육\":[30, 26, 11, 10], \"보건\":[20, 12, 20, 12], \"화학\":[30, 26, 11, 10], \"수리\":[20, 12, 20, 12]}, index=[1,2,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 DataFrame\n",
+      "    이름  국어  수학  영어  과학  체육  보건  화학  수리\n",
+      "1  홍길동  30  20  30  20  30  20  30  20\n",
+      "2  이순신  26  12  26  12  26  12  26  12\n",
+      "3  유관순  11  20  11  20  11  20  11  20\n",
+      "4  강감찬  10  12  10  12  10  12  10  12 \n",
+      "\n",
+      "df.pop(\"국어\")\n",
+      "     이름  수학  영어  과학  체육  보건  화학  수리\n",
+      "1  홍길동  20  30  20  30  20  30  20\n",
+      "2  이순신  12  26  12  26  12  26  12\n",
+      "3  유관순  20  11  20  11  20  11  20\n",
+      "4  강감찬  12  10  12  10  12  10  12 \n",
+      "\n",
+      "del df['수학']\n",
+      "     이름  영어  과학  체육  보건  화학  수리\n",
+      "1  홍길동  30  20  30  20  30  20\n",
+      "2  이순신  26  12  26  12  26  12\n",
+      "3  유관순  11  20  11  20  11  20\n",
+      "4  강감찬  10  12  10  12  10  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 단일 컬럼 삭제\n",
+    "print('원본 DataFrame')\n",
+    "print(df, '\\n')\n",
+    "\n",
+    "df.pop('국어')\n",
+    "print('df.pop(\"국어\")\\n', df, '\\n')\n",
+    "\n",
+    "del df['수학']\n",
+    "print(\"del df['수학']\\n\", df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df.drop(columns=['영어', '과학'], inplace=True)\n",
+      "     이름  체육  보건  화학  수리\n",
+      "1  홍길동  30  20  30  20\n",
+      "2  이순신  26  12  26  12\n",
+      "3  유관순  11  20  11  20\n",
+      "4  강감찬  10  12  10  12 \n",
+      "\n",
+      "df.drop(['체육', '보건'], inplace=True, axis=1)\n",
+      "     이름  화학  수리\n",
+      "1  홍길동  30  20\n",
+      "2  이순신  26  12\n",
+      "3  유관순  11  20\n",
+      "4  강감찬  10  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다중 컬럼 삭제\n",
+    "df.drop(columns=['영어', '과학'], inplace=True)\n",
+    "print(\"df.drop(columns=['영어', '과학'], inplace=True)\\n\", df, '\\n')\n",
+    "df.drop(['체육', '보건'], inplace=True, axis=1)\n",
+    "print(\"df.drop(['체육', '보건'], inplace=True, axis=1)\\n\", df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 행 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df:\n",
+      "  Name  age    birthday\n",
+      "0  유관순   18  1920/09/28\n",
+      "1  안중근   31  1910/03/26\n",
+      "df2:\n",
+      "  Name  age    birthday\n",
+      "0  홍길동   22  1990/09/28\n",
+      "1  강감찬   43  1980/03/26\n",
+      "new_df:\n",
+      "   Name  age    birthday\n",
+      "0  유관순   18  1920/09/28\n",
+      "1  안중근   31  1910/03/26\n",
+      "2  홍길동   22  1990/09/28\n",
+      "3  강감찬   43  1980/03/26\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pd.concat\n",
+    "info={\"Name\":[\"유관순\",\"안중근\"],\"age\":[18,31],\"birthday\":['1920/09/28','1910/03/26']}\n",
+    "df = pd.DataFrame(info)\n",
+    "info2 = {\"Name\":[\"홍길동\",\"강감찬\"],\"age\":[22,43],\"birthday\":['1990/09/28','1980/03/26']}\n",
+    "df2 = pd.DataFrame(info2)\n",
+    "print('df:', df, 'df2:', df2, sep='\\n')\n",
+    "\n",
+    "new_df= pd.concat([df, df2], axis=0, ignore_index=True) # axis 기본값은 0 / 한 번에 여러개도 지정 가능하다.\n",
+    "print('new_df:\\n', new_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 행 삭제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df:\n",
+      "     이름  국어  수학\n",
+      "1  홍길동  30  20\n",
+      "2  이순신  26  12\n",
+      "3  유관순  11  20\n",
+      "4  강감찬  10  12\n",
+      "df.drop(index=[1, 2], inplace=True):\n",
+      "     이름  국어  수학\n",
+      "3  유관순  11  20\n",
+      "4  강감찬  10  12\n",
+      "df.drop([3], axis=0, inplace=True):\n",
+      "     이름  국어  수학\n",
+      "4  강감찬  10  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\"이름\":['홍길동','이순신','유관순','강감찬'], \"국어\":[30, 26, 11, 10], \"수학\":[20, 12, 20, 12]}, index=[1,2,3,4])\n",
+    "print('df:\\n', df)\n",
+    "df.drop(index=[1, 2], inplace=True) # 인덱스명. \n",
+    "print(\"df.drop(index=[1, 2], inplace=True):\\n\", df)\n",
+    "df.drop([3], inplace=True, axis=0)\n",
+    "print(\"df.drop([3], axis=0, inplace=True):\\n\", df)"
    ]
   },
   {
