6/13 빅분기 공부

--- a/빅데이터분석기사/빅데이터분석기사_실기.md
+++ b/빅데이터분석기사/빅데이터분석기사_실기.md
@@ -424,7 +424,7 @@ model.score(x_test, y_test)
     
     - 확률분포: 어떤 확률변수가 취할 수 있는 모든 값들과 그 값을 취할 확률의 대응관계로 표시하는 것
     
-3. 이산형 확률분포: 확률변수가 몇 개의 한정된 가능한 값을 가진느 분포. 각 사건은 서로 독립이어야 한다.</br>예) 이항분포, 베르누이분포, 기하분포, 초기하분포, 포아송분포 등
+3. 이산형 확률분포: 확률변수가 몇 개의 한정된 가능한 값을 가지는 분포. 각 사건은 서로 독립이어야 한다.</br>예) 이항분포, 베르누이분포, 기하분포, 초기하분포, 포아송분포 등
     
     - 베르누이 분포
     
@@ -510,3 +510,153 @@ model.score(x_test, y_test)
         - ppf에서 신뢰도 95%일 때 confidence는 [0.025, 0.975]를 입력
         
         - interval은 신뢰구간을 구하는 메서드. 신뢰도 95%일 때 confidence는 0.95를 넣는다.
+        
+        - 분산이 주어지면 분산 ** 0.5를 하면 표준편차.
+
+- 가설 검정
+
+    - 가설 검정: 모집단에 대해 가설 설정 후 표본관찰을 통해 그 가설의 채택 여부를 결정하는 통계적 추론 방법
+    
+        - 절차
+        
+            1. 가설 설정: 귀무가설/대립가설
+            
+            2. 유의수준(a) 설정: 제 1종 오류의 최대 허용 한계
+            
+            3. 검정통계량 산출: 검정통계량을 통해 p-value 산출
+            
+            4. 기각/채택 판단: p-value < a 일 때 귀무가설 기각
+    
+    - 가설의 종류
+    
+        - 귀무가설: 가설검정의 대상이 되는 가설, 연구자가 부정하고자 하는 가설. </br>알고 있는 것과 같음, 변화 없음, 영향력 없음, 연관성 없음, 효과 없음에 대한 가설
+        
+        - 대립가설(=연구가설): 연구자가 연구를 통해 입증/증명되기를 기대하는 예상이나 주장 </br> 귀무가설이 기각되면 채택되는 가설 </br> 알고 있는 것과 다름, 변화 있음, 영향력 있음, 연관성 있음, 효과 있음에 대한 가설
+    
+    - 가설검정의 종류: 귀무가설을 기각하는 영역의 위치에 따라 세 가지로 나눔
+    
+        1. 양측검정: 귀무가설을 기각하는 영역이 양쪽에 있는 검정
+        
+        2. 단측검정(좌측 검정, 우측 검정): 귀무가설을 기각하는 영역이 좌측/우측에 있는 검정
+    
+    - 귀무가설과 대립가설의 설정
+    
+        - 귀무가설은 "같다, 이상, 이하"의 세 가지 유형이 있다. <-> 대립가설은 "다르다, 작다(미만), 크다(초과)"의 세 가지 유형이 있다.
+        
+        - 귀무가설 및 대립가설은 모집단의 모수에 대한 추론으로 평균, 분산, 확률을 가설에 사용한다.
+        
+        ex) 휴대푠 평균 교체주기가 2년이다(귀무가설) <-> 휴대폰 평균 교체주기가 2년이 아니다(대립가설)
+        </br> 분산이 7보다 크거나 같다(귀무가설) <-> 분산이 7보다 작다(대립가설)
+        </br> 제품 분실률은 5% 이하이다(귀무가설) <-> 제품 분실률은 5%보다 크다(대립가설)
+    
+    - 제 1종/2종 오류
+    
+        - 제 1종 오류(a error): 귀무가설이 참인데 기각되는 오류.
+        
+        - 제 2종 오류(b error): 귀무가설이 거짓인데 채택하는 오류.
+        
+        - 제1종 오류를 범할 확률의 최대 혀용치를 특정값(유의수준)으로 지정해 놓고, 제 2종 오류의 확률을 가장 작게 해주는 검정 방법을 사용한다.
+        
+        - 신뢰수준(1-a): 1종 오류를 범하지 않을 확률. 연구활동(99%), 일반적(95%), 단순설문조사(90%) 사용
+        
+        - 검정력(1-b): 2종 오류를 범하지 않을 확률
+        
+        - 기각역: 귀무가설을 기각하고 대립가설을 채택하게 되는 영역
+        
+        - 유의수준: 귀무가설이 참인데도 기각시키는 확률(제1종 오류 발생 확률)의 최대 허용 한계
+        </br> 유의수준 0.05(5%) = 100번 실험에서 제1종 오류를 범하는 최대 허용 한계가 5번
+        </br> 유의수준 = 1 - 신뢰수준, 유의수준 = 기각역의 총합
+    
+    - 검정통계량: 귀무가설을 채택할지 기각할지를 정하는 판단 기준이 되는 통계량(그래프 x축 값)
+        
+        - 분포표를 사용해 자유도를 고려한 검정통계량, 확률값(p-value)을 구할 수 있음
+    
+    - 유의확률(p-value): 자유도를 고려한 검정통계량에 관한 확률.
+    
+        - 귀무가설의 신뢰구간을 벗어나는 확률(=극단적인 표본 값이 나올 확률), 판정이 잘못되었을 확률
+        
+        - 제1종 오류를 범할 확률, 귀무가설을 지지하는 정도
+        
+        - p-value가 작을 수록 그 정도가 약하다고 보며, p-value < a 일 때, 귀무가설을 기각, 대립가설을 채택
+        
+        - p-value가 0.05 : 귀무가설을 기각했을 때 기각 결정이 잘못될 확률이 5%
+        
+        - 검정통계량의 절대값이 임계값보다 큰 경우 귀무가설 기각. / 유의 확률이 유의수준보다 작으면 귀무가설 기각.
+
+- 정규성 검정: 데이터셋의 분포가 정규분포를 따르는지 검정
+
+    - 중심극한 정리에 의해 표본 크기가 30보다 크면 표본평균의 분포는 모집단의 분포 모양과는 관계없이 정규분포에 가까워짐.
+    
+    - 30이 넘어도 데이터 특이성에 따라 따르지 않을 수 있기 때문에 데이터의 정규분포를 확인하는 것이 좋다.
+    
+    - 종류 및 가설
+    
+        - 종류
+        
+        1. Shapiro-Wilks Test: 표본수가 5000 미만인 데이터셋에 적합한 정규성 검정. p-value 반환
+        
+        2. Kolmogorov-Smirnov Test: 표본수가 2000 초과인 데이터셋에 적합한 정규성 검정. p-value 반환
+        
+        3. Normal Test: 왜도와 첨도를 통해 정규성 검정, 20개 이상의 데이터 필요, p-value 반환
+        
+        4. Anderson Darling Test: 5개 유의수준([15. 10. 5. 2.5 1.])에 대한 임계값 반환
+        
+        - 가설
+        
+            - 귀무가설: 데이터셋이 정규분포를 따른다.(p-value > 유의수준, 검정통계량 < 임계값)
+            
+            - 대립가설: 데이터셋이 정규분포르 따르지 않는다.
+    
+    - 정규성 검정 관련 함수
+    
+    ```python
+    from scipy.stats import shapiro, kstest, normaltest, anderson
+    
+    shapiro(x) # statistic(통계량), p-value 반환
+    
+    kstest(x, "norm") # 두 분포가 같은지 다른지 비교. statistic(통계량), p-value 반환
+    kstest(x, stats.norm.cdf) # alternative='two-sided'(양측), 'less'(좌측), 'greater'(우측)
+    
+    normaltest(x) # statistic(통계량), p-value 반환
+    
+    anderson(x, dist="norm") # statistic, critical_values(임계값), significance_level(유의수준 반환)
+    # dist={'norm', 'expon', 'logistic', 'gumbel_l', 'gumbel_r', 'extreme1'}
+    ```
+    
+- 등분산성 검정: 분산이 동일한지 검정
+
+    - scipy.stats에서 이를 위한 bartlett-killen, levene, fligner 등이 있음
+    
+    - 둘 이상의 정규성을 만족하는 데이터 집합에 대해 모분산이 같은 지 확인하기 위한 검정에는 bartlett 사용
+    
+    - 정규성을 만족하지 않는 경우 levene, fligner를 사용
+    
+    - 종류 및 가설
+    
+        - 종류
+        
+            - Bartlett Killen Test: 정규성을 충족하는, 데이터셋의 크기가 서로 다른 2개 이상의 집단에 사용 가능
+            
+            - Levene Test: 정규성을 충족하지 않는 비모수 데이터 사용 가능(중앙을 median으로 설정)
+            </br> 2개 이상의 집단 사용 가능
+            
+            - Fligner Test: Levene Test와 동일한 특성, 비모수 데이터에 더 강건하게 검정이 가능하다.
+        
+        - 가설
+    
+            - 귀무가설: 데이터셋이 등분산성을 충족한다.
+            
+            - 대립가설: 데이터셋이 등분산성을 충족하지 않는다.
+        
+    - 함수
+    ```python
+    from scipy.stats import bartlett, levene, fligner
+    
+    bartlett(*samples) # statistic, p-value 반환
+    
+    levene(*samples, center='median', proportiontocut=0.05) # statistic, p-value 반환
+    
+    fligner(*samples, center='median', proportiontocut=0.05) # statistic, p-value 반환
+    
+    # center={'median', 'mean', 'trimmed'} / proportiontocut은 trimmed일 경우 사용
+    ```
