--- a/Python/python_pandas.ipynb
+++ b/Python/python_pandas.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2065,7 +2065,7 @@
     "print('1. 열 최대값:\\n', df.max(axis=0), sep='')\n",
     "print('1. 행 최대값:\\n', df.max(axis=1), sep='')\n",
     "print('2. 열 최소값:\\n', df.min(axis=0), sep='')\n",
-    "print('2. 행 최소값:\\n', df.min(ax`is=1), sep='')"
+    "print('2. 행 최소값:\\n', df.min(axis=1), sep='')"
    ]
   },
   {
