Update 6/15 빅분기 공부

--- a/빅데이터분석기사/빅데이터분석기사_실기.md
+++ b/빅데이터분석기사/빅데이터분석기사_실기.md
@@ -660,3 +660,65 @@ model.score(x_test, y_test)
     
     # center={'median', 'mean', 'trimmed'} / proportiontocut은 trimmed일 경우 사용
     ```
+    
+- T-test(=스튜던트 t-테스트): 검정 통계량이 귀무가설 하에서 t-분포를 따르는 통계적 가설 검정
+
+    - 표본을 사용한 모평균 검정 및 두 데이터 세트(집단)의 모평균이 서로 유의하게 다른지 여부를 판단할 수 있음.
+    
+    - 검정통계량이 정규분포를 따르며 모집단의 분산, 표준편차를 알지 못할 때 표본으로부터 추정된 분산/표준편차를 사용해 검정
+    
+    - 정규성, 등분산성 조건이 만족되어야 한다.
+    
+    - 종류 및 가설
+    
+        - 종류
+    
+            - One Sample t-test: 표본을 사용한 모평균 검정방법
+            </br>예) 귀무가설: S사 USB의 평균 수명은 20000시간이다.
+            
+            - Paired t-test(대응표본 t-검정)
+            
+                - 동일 개체에 어떤 처리를 하기 전, 후의 자료를 얻을 때 차이 값에 대한 평균 검정을 위한 방법
+                </br>예: 매일 1시간 한 달 걸으면 2Kg이 빠진다(걷기 수행 전/수행 후)
+                
+                - 가능한 동일한 특성을 갖는 두 개체에 서로 다른 처리를 하여 그 처리의 효과를 비교하는 방법
+                </br>예: X질병 환자들을 두 집단으로 나누어 A, B 약을 투약해 약의 효과 비교
+                
+            - Two sample t-test(독립표본 t-검정): 서로 다른 두 그룹의 표본 평균을 비교하여 두 모집단의 평균 차이가 있는지 검정하는 방법
+            </br>예) 귀무가설: 두 집단의 평균 차이 값이 0이다. 2학년과 3학년의 결석률은 같다.
+        
+        - 가설
+        
+            - One Sample t-test
+            
+                - two-sided: 귀무가설 - 모집단의 평균이 A와 같다 / 대립가설 - 모집단의 평균이 A와 같지 않다
+                
+                - less: 귀무가설 - 모집단의 평균이 A보다 크거나 같다 / 대립가설 - 모집단의 평균이 A보다 작다
+                
+                - greater: 귀무가설 - 모집단의 평균이 A보다 작거나 같다 / 대립가설 - 모집단의 평균이 A보다 크다
+            
+            - paired t-test, Two Sample t-test
+            
+                - two-sided: 귀무가설 - 두 집단 간 평균 차이는 0이다 / 대립가설 - 두 집단 간 평균 차이는 0이 아니다
+                
+                - less: 귀무가설 - 두 집단 평균의 차는 0보다 크거나 같다 / 대립가설 - 두 집단 평균의 차는 0보다 작다
+                </br> 귀무가설 - A집단 평균이 B집단 평균보다 크거나 같다. / 대립가설 - A집단 평균이 B집단 평균보다 작다
+                
+                - greater: 귀무가설 - 두 집단 평균의 차는 0보다 작거나 같다 / 대립가설 - 두 집단 평균의 차는 0보다 크다
+                </br> 귀무가설 - A집단 평균이 B집단 평균보다 작거나 같다 / 대립가설 - A집단 평균이 B집단 평균보다 크다
+        
+    - 함수
+    
+    ```python
+    from scipy.stats import ttest_1samp, ttest_rel, ttest_ind
+    
+    ttest_1samp(a, popmean, alternative='two-sided') # statistic, p-value 반환 / popmean = 모집단의 평균으로 가정한 값
+    
+    ttest_rel(a, b, alternative='two-sided') # statistic, p-value 반환 / a=처리 후 집단, b=처리 전 집단
+    
+    ttest_ind(a, b, alternative='two-sided', equal_var=True) # statistic, p-value 반환
+    # equal_var=False인 경우 Welch's t-test를 수행
+    ```
+    
+    - alternative less -> 효과 있음에 대해 판단할 때 사용
+    </br> `ttest_rel(df['after'], df['before'], alternative='less')`
